Version 1.4.0
    * not yet released
    * highlighting host in address in locationbar
    * can now be compiled using Qt 5
    * QtWebKit 2.3 new features - caret browsing, animated scrolling
    * added support for FTP listing files and downloading
    * added support for saving passwords of multiple users per site
    * added support for showing tabs on top
    * added bash autocompletion file
    * possibility to select text on page with Shift+Arrow keys
    * asking user whether to allow site to use notifications/geolocation
    * option to set JavaScript privacy permissions
    * option to specify default search engine used in locationbar
    * option to disable search suggestions in websearchbar
    * option to search only whole words in source viewer
    * option to hide reload/stop buttons in navigationbar
    * option to disable alt/ctrl + numbers shortcuts
    * option to switch to tab from locationbar popup completer
    * option to set where to store network cache
    * use .qupzilla/tmp instead of /tmp for temporary data
    * saving passwords should now work for much more sites
    * don't steal Ctrl+B/U/I shortcuts from page
    * disabled by default opacity effect on tab previews - see BUILDING
    * improved showing navigation toolbar in fullscreen
    * moved config directory into ~/.config/qupzilla
    * certificates bundle is now only used on windows
    * reduced memory usage of AdBlock (saves up to 30MB with just EasyList)
    * greatly improved performance when matching regexp rules in AdBlock
    * GreaseMonkey: reload script if source file changed on disk
    * GreaseMonkey: fixed don't loading invalid scripts
    * fixed opening browser with url with ampersand (%26) as command line argument
    * fixed scrolling to anchor in background tabs
    * fixed parsing UTF-8 filenames in Content-Disposition header
    * fixed crash with context menu in websearchbar and locationbar
    * fixed loading NYTimes skimmer page